[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/enemies/mummy/mummy2.res" type="SpriteFrames" id=1]
[ext_resource path="res://entities/enemies/mummy.gd" type="Script" id=2]
[ext_resource path="res://assets/bullets/mummy-swipe.res" type="SpriteFrames" id=3]
[ext_resource path="res://entities/facing_sprite.gd" type="Script" id=4]
[ext_resource path="res://addons/behavior_tree/src/blackboard.gd" type="Script" id=5]
[ext_resource path="res://addons/behavior_tree/src/btnodes/composites/bt_selector.gd" type="Script" id=6]
[ext_resource path="res://addons/behavior_tree/src/behavior_tree.gd" type="Script" id=7]
[ext_resource path="res://entities/behaviors/bt_random.gd" type="Script" id=8]
[ext_resource path="res://entities/behaviors/mummy/melee.gd" type="Script" id=9]
[ext_resource path="res://entities/behaviors/stalk.gd" type="Script" id=10]
[ext_resource path="res://entities/behaviors/bt_distance_to_player.gd" type="Script" id=11]
[ext_resource path="res://entities/behaviors/mummy/shoot.gd" type="Script" id=12]
[ext_resource path="res://entities/behaviors/bt_cansee_player.gd" type="Script" id=13]
[ext_resource path="res://addons/behavior_tree/src/btnodes/bt_composite.gd" type="Script" id=14]
[ext_resource path="res://entities/behaviors/bt_random_wait.gd" type="Script" id=15]
[ext_resource path="res://entities/behaviors/bt_random_repeat.gd" type="Script" id=16]
[ext_resource path="res://utils/dialog_tag.tscn" type="PackedScene" id=17]

[sub_resource type="CylinderShape" id=1]
radius = 0.429252
height = 1.06365

[sub_resource type="CapsuleShape" id=2]
radius = 0.288202
height = 1.15862

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.807843, 0.054902, 0.054902, 0 )

[node name="mummy" type="KinematicBody" groups=[
"enemy",
]]
script = ExtResource( 2 )
health = 90.0
speed = 170.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0395, 0 )

[node name="SwipeVolume" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.64791 )
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.873, 0 )
shape = SubResource( 2 )

[node name="shoot_anchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0411585, 1.54153, -0.00104636 )

[node name="eye_mount" type="Spatial" parent="."]
transform = Transform( 5.95396e-10, 0, -0.0499289, 0, 0.0499289, 0, 0.0499289, 0, 5.95396e-10, 0, 1.546, 0 )

[node name="eye" type="MeshInstance" parent="eye_mount"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.612456, 0, -1 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="light" type="OmniLight" parent="eye_mount"]
transform = Transform( 20.0285, 0, 0, 0, 20.0285, 0, 0, 0, 20.0285, -0.583, 0, -5 )
light_color = Color( 0.737255, 0.0509804, 0.0509804, 1 )
light_energy = 0.0
omni_range = 2.79825

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.975, 0 )
billboard = 2
frames = ExtResource( 1 )
animation = "arms"
script = ExtResource( 4 )

[node name="SwipePlayer" type="AnimatedSprite3D" parent="sprite"]
transform = Transform( 0.666667, 0, 0, 0, 0.666667, 0, 0, 0, 0.666667, 0, 0.043, 0 )
pixel_size = 0.03
billboard = 2
frames = ExtResource( 3 )
animation = "motion"

[node name="Blackboard" type="Node" parent="."]
script = ExtResource( 5 )

[node name="behavior_tree" type="Node" parent="."]
script = ExtResource( 7 )
is_active = true
_blackboard = NodePath("../Blackboard")
_agent = NodePath("..")

[node name="BTSelector" type="Node" parent="behavior_tree"]
script = ExtResource( 6 )

[node name="20% chance to attack\?" type="Node" parent="behavior_tree/BTSelector"]
script = ExtResource( 8 )
odds = 20

[node name="Can See Player\?" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?"]
script = ExtResource( 13 )

[node name="BTSelector" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?"]
script = ExtResource( 6 )

[node name="Is player in range\?" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector"]
script = ExtResource( 11 )

[node name="BTComposite" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Is player in range\?"]
script = ExtResource( 14 )

[node name="melee" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Is player in range\?/BTComposite"]
script = ExtResource( 9 )

[node name="wait after attacking" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Is player in range\?/BTComposite"]
script = ExtResource( 15 )
min_wait = 0.5
max_wait = 3.0

[node name="Shoot 1-4 times" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector"]
script = ExtResource( 16 )
min_repeat = 1
max_repeat = 4

[node name="shoot" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Shoot 1-4 times"]
script = ExtResource( 14 )

[node name="fire_shot" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Shoot 1-4 times/shoot"]
script = ExtResource( 12 )

[node name="wait after shooting" type="Node" parent="behavior_tree/BTSelector/20% chance to attack\?/Can See Player\?/BTSelector/Shoot 1-4 times/shoot"]
script = ExtResource( 15 )
min_wait = 0.2
max_wait = 1.2

[node name="Stalk the player" type="Node" parent="behavior_tree/BTSelector"]
script = ExtResource( 10 )

[node name="dialog_tag" parent="." instance=ExtResource( 17 )]
tag = "Enemy: Mummy"

[node name="sfx" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.25038, 0.0777247 )
unit_db = 40.0
unit_size = 50.0
max_db = 6.0
